recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:10: error: recursive method spiral needs result type
    spiral(steps-1,angle,length+increment,increment)
    ^